--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "url": "git://github.com/dominictarr/l6.git"
   },
   "dependencies": {
+    "minimist": "^1.2.5",
     "stack-expression": "^1.4.1",
-    "tape": "^4.13.2"
+    "tape": "^4.13.2",
+    "wasm-string": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
     "test": "tape test/*.js"
   },
-  "bin":"./load.js",
+  "bin": "./load.js",
   "author": "Dominic Tarr @EMovhfIrFk4NihAKnRNhrfRaqIhBv1Wj8pTxJNgvCCY=.ed25519",
   "license": "MIT"
 }
